--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "manzil-finder",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
     "bootstrap": "4.3.1",
