--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@popperjs/core": "^2.9.2",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
-    "bootstrap": "4.3.1",
+    "bootstrap": "^5.0.0-beta3",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
